@@ -30,39 +30,6 @@
 #define __HX2_ARCHDEFS__
 
 
-#if defined(__APPLE__) && defined(__MACH__)
-#   if !defined(__MACOSX__)
-#	define	__MACOSX__		1
-#   endif
-#elif defined(macintosh) /* MacOS Classic */
-#   if !defined(__MACOS__)
-#	define	__MACOS__		1
-#   endif
-#elif (defined(__sun) || defined(sun)) && \
-		(defined(__svr4__) || defined(__SVR4))
-#   if !defined(__SOLARIS__)
-#	define	__SOLARIS__		1
-#   endif
-#elif defined(__sun) || defined(sun)
-#   if !defined(__SUNOS__)
-#	define	__SUNOS__		1
-#   endif
-#elif defined(__sgi) || defined(sgi) || defined(__sgi__) || defined(_SGI_SOURCE)
-#   if !defined(__IRIX__)
-#	define	__IRIX__		1
-#   endif
-#elif defined(__QNXNTO__)
-#   if !defined(__QNX__)
-#	define	__QNX__			1
-#   endif
-#elif defined(__amigados__) || defined(__amigaos4__) || \
-		defined(__AMIGA) || defined(__amigaos__)
-#   if !defined(__AMIGA__)
-#	define	__AMIGA__		1
-#   endif
-#endif	/* end of custom definitions	*/
-
-
 #if defined(__DJGPP__) || defined(MSDOS) || defined(__MSDOS__) || defined(__DOS__)
 
 #   if !defined(PLATFORM_DOS)
@@ -75,13 +42,21 @@
 #	define	PLATFORM_WINDOWS	1
 #   endif
 
-#elif defined(__MACOS__) || defined(__MACOSX__)
+#elif defined(__APPLE__) && defined(__MACH__)		/* Mac OS X */
+
+#   if !defined(PLATFORM_OSX)
+#	define	PLATFORM_OSX		1
+#   endif
+
+#elif defined(macintosh)			/* Mac OS classic */
 
 #   if !defined(PLATFORM_MAC)
 #	define	PLATFORM_MAC		1
 #   endif
 
-#elif defined(__MORPHOS__) || defined(__AMIGA__) || defined(__AROS__)
+#elif defined(__MORPHOS__) || defined(__AROS__)			|| \
+      defined(__amigaos__) || defined(__amigaos4__)		|| \
+      defined(__amigados__) || defined(__AMIGA) || defined(__AMIGA__)
 
 #   if !defined(PLATFORM_AMIGA)
 #	define	PLATFORM_AMIGA		1
@@ -98,10 +73,13 @@
 #if defined(__unix) || defined(__unix__) || defined(unix)	|| \
     defined(__linux__) || defined(__linux)			|| \
     defined(__FreeBSD__) || defined(__DragonFly__)		|| \
+    defined(__FreeBSD_kernel__) /* Debian GNU/kFreeBSD */	|| \
     defined(__OpenBSD__) || defined(__NetBSD__)			|| \
     defined(__hpux) || defined(__hpux__) || defined(_hpux)	|| \
-    defined(__sun) || defined(sun) || defined(__IRIX__)		|| \
-    defined(__GNU__) /* GNU/Hurd */ || defined(__QNX__)
+    defined(__sun) || defined(sun)				|| \
+    defined(__sgi) || defined(sgi) || defined(__sgi__)		|| \
+    defined(__GNU__) /* GNU/Hurd */				|| \
+    defined(__QNX__) || defined(__QNXNTO__)
 #   if !defined(PLATFORM_UNIX)
 #	define	PLATFORM_UNIX		1
 #   endif
@@ -110,16 +88,20 @@
 #endif	/* end of PLATFORM_ definitions */
 
 
-/* Platforms that are (mostly) fine
- * when classified as PLATFORM_UNIX :
- */
-#if defined(__MACOSX__)
-
+#if defined (PLATFORM_OSX)		/* OS X is unix-based */
 #   if !defined(PLATFORM_UNIX)
 #	define	PLATFORM_UNIX		2
 #   endif
+#endif	/* OS X -> PLATFORM_UNIX */
 
-#endif	/* end of (pseudo) PLATFORM_UNIX */
+
+#if defined(__FreeBSD__) || defined(__DragonFly__)		|| \
+    defined(__FreeBSD_kernel__) /* Debian GNU/kFreeBSD */	|| \
+    defined(__OpenBSD__) || defined(__NetBSD__)
+#   if !defined(PLATFORM_BSD)
+#	define	PLATFORM_BSD		1
+#   endif
+#endif	/* PLATFORM_BSD (for convenience) */
 
 
 #if defined(_WIN64)
@@ -142,21 +124,21 @@
 #	define	PLATFORM_STRING	"MorphOS"
 #elif defined(__AROS__)
 #	define	PLATFORM_STRING	"AROS"
-#elif defined(__AMIGA__)
+#elif defined(PLATFORM_AMIGA)
 #	define	PLATFORM_STRING	"AmigaOS"
-#elif defined(__QNX__)
+#elif defined(__QNX__) || defined(__QNXNTO__)
 #	define	PLATFORM_STRING	"QNX"
-#elif defined(__MACOSX__)
+#elif defined(PLATFORM_OSX)
 #	define	PLATFORM_STRING	"MacOSX"
-#elif defined(__MACOS__)
+#elif defined(PLATFORM_MAC)
 #	define	PLATFORM_STRING	"MacOS"
 #elif defined(__hpux) || defined(__hpux__) || defined(_hpux)
 #	define	PLATFORM_STRING	"HP-UX"
-#elif defined(__SOLARIS__)
+#elif (defined(__sun) || defined(sun)) && (defined(__svr4__) || defined(__SVR4))
 #	define	PLATFORM_STRING	"Solaris"
-#elif defined(__SUNOS__)
+#elif defined(__sun) || defined(sun)
 #	define	PLATFORM_STRING	"SunOS"
-#elif defined(__IRIX__)
+#elif defined(__sgi) || defined(sgi) || defined(__sgi__)
 #	define	PLATFORM_STRING	"Irix"
 #elif defined(PLATFORM_RISCOS)
 #	define	PLATFORM_STRING	"RiscOS"
