@@ -110,8 +110,9 @@ static inline char *FIND_LAST_DIRSEP (const char *_the_path) {
 #endif /* C++ */
 
 /* ----------------- AmigaOS, MorphOS, AROS, etc: ----------------- */
-#elif defined(__amigados__) || defined(__amigaos4__) || defined(__AMIGA) || \
-	defined(__amigaos__) || defined(__MORPHOS__) || defined(__AROS__)
+#elif defined(__MORPHOS__) || defined(__AROS__)			|| \
+      defined(__amigaos__) || defined(__amigaos4__)		|| \
+      defined(__amigados__) || defined(__AMIGA) || defined(__AMIGA__)
 
 #define HAS_DRIVE_SPEC(f)	(0) /* */
 #define STRIP_DRIVE_SPEC(f)	(f) /* */
